--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -36,6 +36,7 @@
                         <group>
                             <field name="postcode"/>
                             <field name="date_availability" string="Available From"/>
+                            <field name="state"/>
                         </group>
                         <group>
                             <field name="expected_price"/>
@@ -60,4 +61,26 @@
             </form>
         </field>
     </record>
+
+    <record id="estate_property_view_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search string="Suche">
+                <field name="name"/>
+                <field name="postcode"/>
+                <field name="bedrooms"/>
+                <field name="living_area" string="Living Area (sqm)"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="date_availability" string="Available From"/>
+                <separator/>
+                <filter name="available" string="Available" domain="['|', ('state', '=', 'n'), ('state', '=', 'r')]"/>
+                <group expand="1" string="Group By">
+                    <filter string="Postcode" name="postcode" context="{'group_by':'postcode'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
 </odoo>
