--- a/estate/views/estate_menus.xml
+++ b/estate/views/estate_menus.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <odoo>
     <menuitem id="estate_menu_root" name="Real Estate">
-        <menuitem id="estate_first_level_menu" name="Advertisements">
-            <menuitem id="estate_model_menu_action" action="estate_property_action" name="Properties"/>
+        <menuitem id="estate_advertisements_menu" name="Advertisements">
+            <menuitem id="estate_advertisements_properties_action" action="estate_property_action" name="Properties"/>
+        </menuitem>
+        <menuitem id="estate_settings_menu" name="Settings">
+            <menuitem id="estate_settings_propertytypes_action" action="estate_property_type_action" name="Property Types"/>
         </menuitem>
     </menuitem>
 </odoo>
