--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -12,6 +12,7 @@
         <field name="arch" type="xml">
             <tree string="Channel">
                 <field name="name"/>
+                <field name="property_type_id"/>
                 <field name="postcode"/>
                 <field name="bedrooms"/>
                 <field name="living_area"/>
@@ -34,11 +35,12 @@
                     </h1>
                     <group>
                         <group>
+                            <field name="property_type_id"/>
                             <field name="postcode"/>
                             <field name="date_availability" string="Available From"/>
-                            <field name="state"/>
                         </group>
                         <group>
+                            <field name="state"/>
                             <field name="expected_price"/>
                             <field name="selling_price"/>
                         </group>
@@ -56,6 +58,12 @@
                                 <field name="garden_orientation"/>
                             </group>
                         </page>
+                        <page string="Other Info">
+                            <group>
+                                <field name="salesperson_id"/>
+                                <field name="buyer_id"/>
+                            </group>
+                        </page>
                     </notebook>
                 </sheet>
             </form>
@@ -68,6 +76,7 @@
         <field name="arch" type="xml">
             <search string="Suche">
                 <field name="name"/>
+                <field name="property_type_id"/>
                 <field name="postcode"/>
                 <field name="bedrooms"/>
                 <field name="living_area" string="Living Area (sqm)"/>
