--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -30,9 +30,12 @@
         <field name="arch" type="xml">
             <form string="Formularchen">
                 <sheet>
-                    <h1 style="margin-bottom: 2rem">
+                    <h1>
                         <field name="name"/>
                     </h1>
+                    <div style="margin-bottom: 2rem">
+                        <field name="tag_ids" widget="many2many_tags"/>
+                    </div>
                     <group>
                         <group>
                             <field name="property_type_id"/>
@@ -57,6 +60,9 @@
                                 <field name="garden_area" string="Garden Area (sqm)"/>
                                 <field name="garden_orientation"/>
                             </group>
+                        </page>
+                        <page string="Offers">
+                            <field name="offer_ids"/>
                         </page>
                         <page string="Other Info">
                             <group>
