--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -45,6 +45,7 @@
                         <group>
                             <field name="state"/>
                             <field name="expected_price"/>
+                            <field name="best_price" string="Best Offer"/>
                             <field name="selling_price"/>
                         </group>
                     </group>
@@ -59,6 +60,7 @@
                                 <field name="garden"/>
                                 <field name="garden_area" string="Garden Area (sqm)"/>
                                 <field name="garden_orientation"/>
+                                <field name="total_area" string="Total Area (sqm)"/>
                             </group>
                         </page>
                         <page string="Offers">
