--- a/estate/views/estate_property_offer_views.xml
+++ b/estate/views/estate_property_offer_views.xml
@@ -8,6 +8,8 @@
             <tree string="Offersxx">
                 <field name="price"/>
                 <field name="partner_id"/>
+                <field name="validity" string="Validy (days)"/>
+                <field name="date_deadline" string="Deadline"/>
                 <field name="status"/>
             </tree>
         </field>
@@ -23,6 +25,8 @@
                     <group>
                         <field name="price"/>
                         <field name="partner_id"/>
+                        <field name="validity" string="Validity (days)"/>
+                        <field name="date_deadline" string="Deadline"/>
                         <field name="status"/>
                     </group>
                 </sheet>
