--- a/estate/views/estate_property_offer_views.xml
+++ b/estate/views/estate_property_offer_views.xml
@@ -10,6 +10,8 @@
                 <field name="partner_id"/>
                 <field name="validity" string="Validy (days)"/>
                 <field name="date_deadline" string="Deadline"/>
+                <button name="action_accepted_pressed" type="object" title="Accepted" icon="fa-check"/>
+                <button name="action_refused_pressed" type="object" title="Refused" icon="fa-times"/>
                 <field name="status"/>
             </tree>
         </field>
