--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -29,6 +29,10 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form string="Formularchen">
+                <header>
+                    <button name="action_cancel_pressed" type="object" string="Cancel"/>
+                    <button name="action_sold_pressed" type="object" string="Sold"/>
+                </header>
                 <sheet>
                     <h1>
                         <field name="name"/>
