Chapter 12 Section Attributes and Options/Form done

--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -39,11 +39,11 @@
                         <field name="name"/>
                     </h1>
                     <div style="margin-bottom: 2rem">
-                        <field name="tag_ids" widget="many2many_tags"/>
+                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                     </div>
                     <group>
                         <group>
-                            <field name="property_type_id"/>
+                            <field name="property_type_id" options="{'no_create_edit': True}"/>
                             <field name="postcode"/>
                             <field name="date_availability" string="Available From"/>
                         </group>
@@ -63,13 +63,13 @@
                                 <field name="facades"/>
                                 <field name="garage"/>
                                 <field name="garden"/>
-                                <field name="garden_area" string="Garden Area (sqm)"/>
-                                <field name="garden_orientation"/>
+                                <field name="garden_area" string="Garden Area (sqm)" attrs="{'invisible': [('garden', '=', False)]}"/>
+                                <field name="garden_orientation" attrs="{'invisible': [('garden', '=', False)]}"/>
                                 <field name="total_area" string="Total Area (sqm)"/>
                             </group>
                         </page>
                         <page string="Offers">
-                            <field name="offer_ids"/>
+                            <field name="offer_ids" attrs="{'readonly': ['|', ('state', '=', 'a'), '|', ('state', '=', 's'), ('state', '=', 'c')]}"/>
                         </page>
                         <page string="Other Info">
                             <group>
