--- a/estate/views/estate_property_offer_views.xml
+++ b/estate/views/estate_property_offer_views.xml
@@ -5,14 +5,14 @@
         <field name="name">estate.property.offer.tree</field>
         <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
-            <tree string="Offersxx">
+            <tree string="Offersxx" editable="bottom" decoration-danger="status == 'r'" decoration-success="status == 'a'">
                 <field name="price"/>
                 <field name="partner_id"/>
                 <field name="validity" string="Validy (days)"/>
                 <field name="date_deadline" string="Deadline"/>
                 <button name="action_accepted_pressed" type="object" title="Accepted" icon="fa-check" attrs="{'invisible': ['|', ('status', '=', 'a' ), ('status', '=', 'r')]}"/>
                 <button name="action_refused_pressed" type="object" title="Refused" icon="fa-times" attrs="{'invisible': ['|', ('status', '=', 'a' ), ('status', '=', 'r')]}"/>
-                <field name="status"/>
+                <field name="status" invisible='True'/>
             </tree>
         </field>
     </record>
